# qbittorrent-connection-monitor

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: qbittorent-connection-monitor.yml  qbittorrent-connection-monitor.yml
src/: main.rs
