[package]
name = "qbittorrent-connection-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
qbit-rs = "0.3.6"
url = "2.4.1"
dotenv = "0.15.0"

tracing = "0.1"
tracing-subscriber = "0.3"
